--- a/us/template/index.html
+++ b/us/template/index.html
@@ -3,12 +3,69 @@
 <html lang="en">
 
 <head>
+    
     <script>
         var count = 0;
 
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        #search-results{
+            position: fixed;
+            background-color: white;
+            z-index: 1;
+            top: 75px;
+        }
+        .search-container {
+        position: relative;
+        width: 50%;
+        margin-left: 3px;
+    }
+
+    /* Style for the user list container */
+    .user-list {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        max-height: 200px; /* Set a maximum height for the list */
+        overflow-y: auto; /* Enable vertical scrolling */
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-top: none;
+        display: none; /* Hide by default */
+    }
+
+    /* Style for each user box */
+    .user-box {
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #ccc;
+        padding: 10px;
+    }
+
+    /* Style for user image */
+    .user-img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin-right: 10px;
+    }
+
+    /* Style for user name */
+    .user-name {
+        font-weight: bold;
+    }
+    @media (max-width: 991.98px) {
+        #search-results{
+            position: fixed;
+            background-color: white;
+            z-index: 1;
+            top: 125px;
+        }
+}
+    </style>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -98,9 +155,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="ms-3 d-flex w-50">
-                    <input type="text" class="form-control" placeholder="Search">
+                <div class="ms-3 d-flex w-75">
+                    <input type="text" class="form-control" id="search_bar" placeholder="Search">
                     <button class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></button>
+                </div>
+                <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
+                    <!-- Results will be displayed here -->
                 </div>
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -199,9 +259,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="ms-3 d-flex w-50">
-                    <input type="text" class="form-control" placeholder="Search">
+                <div class="ms-3 d-flex w-75">
+                    <input type="text" class="form-control" id="search_bar" placeholder="Search">
                     <button class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></button>
+                </div>
+                <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
+                    <!-- Results will be displayed here -->
                 </div>
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -447,9 +510,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="ms-3 d-flex w-50">
-                    <input type="text" class="form-control" placeholder="Search">
+                <div class="ms-3 d-flex w-75">
+                    <input type="text" class="form-control" id="search_bar" placeholder="Search">
                     <button class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></button>
+                </div>
+                <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
+                    <!-- Results will be displayed here -->
                 </div>
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -479,6 +545,7 @@
             </div>
         </div>
     </nav>
+    
     <div class="d-flex flex-wrap justify-content-center mt-4">
         <div class="col-lg-3 player-profile h-50 col-12 m-3 p-5 rounded bg-white shadow-lg position-sticky">
             <div class="">
@@ -663,9 +730,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="ms-3 d-flex w-50">
-                    <input type="text" class="form-control" placeholder="Search">
+                <div class="ms-3 d-flex w-75">
+                    <input type="text" class="form-control" id="search_bar" placeholder="Search">
                     <button class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></button>
+                </div>
+                <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
+                    <!-- Results will be displayed here -->
                 </div>
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -1007,5 +1077,74 @@
                 }
             });
         });
+        $("#search_bar").keyup(function(){
+            
+            var headers = {
+                "X-CSRFToken": $("input[name=csrfmiddlewaretoken]").val()
+            };
+            var searchTerm = $(this).val();
+            console.log(searchTerm)
+            if (searchTerm.trim() === "") {
+        // If it's empty, hide the container and return
+        $("#search-results").hide();
+        return;
+    }
+    
+            $.ajax({
+                type:"GET",
+                headers: headers,
+                dataType:'Json',
+                url:"{% url 'search_by_name' 0 %}".replace('0',searchTerm),
+                success: function (data) {
+                    // Clear previous results
+                    $("#search-results").empty();
+
+                    // Parse the JSON data
+                    var users = JSON.parse(data);
+                    
+                    // Loop through the users and create HTML elements
+                    for (var i = 0; i < users.length; i++) {
+                        
+    var user = users[i];
+    console.log(user.pk)
+    var userHtml = '<div class="user-box">';
+    userHtml += '<img class="user-img" src="' + user.fields.img + '" alt="User Image">';
+    userHtml += '<p class="user-name">';
+    
+    // Check if the user is a Scout and add a link to ScoutHome
+    if (user.fields.is_scout) {
+        userHtml += '<a class="text-decoration-none text-dark" href="{% url "scout-home" 0 %}">'.replace("0",user.pk);
+        userHtml += user.fields.first_name + ' ' + user.fields.last_name;
+    }
+    // Check if the user is a Player and add a link to PlayerHome
+    else if (user.fields.is_player) {
+        userHtml += '<a class="text-decoration-none text-dark" href="{% url "player-home" 0 %}">'.replace("0",user.pk);
+        userHtml += user.fields.first_name + ' ' + user.fields.last_name;
+    }
+    else{
+        userHtml += '<a class="text-decoration-none text-dark" href="{% url "clubHome" 0 %}">'.replace("0",user.pk);
+        userHtml += user.fields.club_name;
+    }
+    
+    // Close the anchor tag if added
+    if (user.fields.isScout || user.fields.isPlayer) {
+        userHtml += '</a>';
+    }
+    
+    userHtml += '</p>';
+    userHtml += '</div>';
+
+    $("#search-results").append(userHtml);
+}
+
+                    
+                    // Show the user list
+                    $("#search-results").show();
+                },
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                }
+            })
+        })
     });
 </script>
