--- a/us/template/CompleteClub.html
+++ b/us/template/CompleteClub.html
@@ -39,7 +39,7 @@
                     {% csrf_token %}
     
                     <label class="fw-bold" for="img">Upload your club logo</label>
-                    <div class="d-flex justify-content-center mb-4"><input type="file" id="img" name="img"></div>
+                    <div class="d-flex justify-content-center mb-4"><input type="file" id="img" name="img" accept="image/png, image/gif, image/jpeg"></div>
                     <label class="fw-bold" for="clubname">Club Name</label>
                     <input type="text" id="clubname" name="clubname">
                     <button class="btn btn-outline-success mt-2">Submit</button>
