--- a/us/template/EditClub.html
+++ b/us/template/EditClub.html
@@ -123,7 +123,7 @@
                 <div class="d-flex justify-content-center"><img class="col-lg-2 col-5 rounded-circle" src={{user.img.url}}
                         alt=""></div>
 
-                <div class="d-flex justify-content-center"><input type="file" class="mt-4" name="img" value="Change logo"></div>
+                <div class="d-flex justify-content-center"><input type="file" accept="image/*" class="mt-4" name="img" value="Change logo"></div>
                 <div class="d-flex justify-content-center">
                     <div class="col-lg-8 col-12">
                         <div class="d-flex justify-content-center gap-2 m-5">
