--- a/us/template/PostImage.html
+++ b/us/template/PostImage.html
@@ -210,7 +210,7 @@
             <p class="m-4 text-secondary fs-4 fw-bold">Image Post</p>
             <form action="" method="post"  enctype="multipart/form-data">
                 {% csrf_token %}
-                <div class="d-flex justify-content-center"><input type="file" required class="mt-4" name="img" value="Change image"></div>
+                <div class="d-flex justify-content-center"><input type="file" required class="mt-4" name="img" value="Change image" accept="image/*"></div>
                 <div class="d-flex justify-content-center">
                     <div class="col-lg-8 col-12">
                         <div class="d-flex justify-content-center gap-2 m-5">
