--- a/us/template/RegisterScout.html
+++ b/us/template/RegisterScout.html
@@ -125,7 +125,7 @@
                 {% csrf_token %}
                 
 
-                <div class="d-flex justify-content-center"><input type="file" class="mt-4" name="img" value="Change logo"></div>
+                <div class="d-flex justify-content-center"><input type="file" accept="image/*" class="mt-4" name="img" value="Change logo"></div>
                 <div class="d-flex justify-content-center">
                     <div class="col-lg-8 col-12">
                         <div class="d-flex justify-content-center gap-2 m-5">
