--- a/us/template/index.html
+++ b/us/template/index.html
@@ -574,10 +574,12 @@
                     <p class="fs-4 fw-bold">{{post_count}}</p>
                     <p class="fs-5">Posts</p>
                 </div>
-                <div class="text-center">
-                    <p class="fs-4 fw-bold">{{followers}}</p>
-                    <p class="fs-5">Followers</p>
-                </div>
+                <a class="text-decoration-none text-dark" href="{% url 'follower' user.id %}">
+                    <div class="text-center">
+                        <p class="fs-4 fw-bold">{{followers}}</p>
+                        <p class="fs-5">Followers</p>
+                    </div>
+                </a>
                 <div class="text-center">
                     <p class="fs-4 fw-bold">{{following}}</p>
                     <p class="fs-5">Following</p>
