--- a/us/template/ScoutPlayerEdit.html
+++ b/us/template/ScoutPlayerEdit.html
@@ -125,31 +125,31 @@
                             <div class="d-flex flex-wrap w-100">
                                 <div class="d-flex flex-column w-100">
                                     <label for="pace">Pace</label>
-                                    <input class="form-control" type="number" name="pace" max="100">
+                                    <input class="form-control" type="number" min="0" name="pace" max="100">
                                 </div>
                                 <div class="d-flex flex-column w-100">
                                     <label for="shooting">Shooting</label>
-                                    <input class="form-control" type="number" name="shooting" max="100">
+                                    <input class="form-control" type="number" min="0" name="shooting" max="100">
                                 </div>
                                 <div class="d-flex flex-column w-100">
                                     <label for="passing">Passing</label>
-                                    <input class="form-control" type="number" name="passing" max="100">
+                                    <input class="form-control" type="number" min="0" name="passing" max="100">
                                 </div>
                                 <div class="d-flex flex-column w-100">
                                     <label for="dribbling">Dribbling</label>
-                                    <input class="form-control" type="number" name="dribbling" max="100">
+                                    <input class="form-control" type="number" min="0" name="dribbling" max="100">
                                 </div>
                                 <div class="d-flex flex-column w-100">
                                     <label for="defending">Defending</label>
-                                    <input class="form-control" type="number" name="defending" max="100">
+                                    <input class="form-control" type="number" min="0" name="defending" max="100">
                                 </div>
                                 <div class="d-flex flex-column w-100">
                                     <label for="physical">Physical</label>
-                                    <input class="form-control" type="number" name="physical" max="100">
+                                    <input class="form-control" type="number" min="0" name="physical" max="100">
                                 </div>
                                 <div class="d-flex flex-column w-100">
                                     <label for="age">Age</label>
-                                    <input class="form-control" type="number" name="age" max="100">
+                                    <input class="form-control" type="number" min="0" name="age" max="100">
                                 </div>
                             </div>
                             
