--- a/us/template/following.html
+++ b/us/template/following.html
@@ -205,7 +205,7 @@
         </div>
     </nav>
     {% endif %}
-    <p class="m-5 text-secondary fw-bold fs-3">Followers</p>
+    <p class="m-5 text-secondary fw-bold fs-3">Following</p>
     <div class="d-flex flex-column align-items-center justify-content-center">
         
         
