--- a/us/template/likes.html
+++ b/us/template/likes.html
@@ -205,28 +205,28 @@
         </div>
     </nav>
     {% endif %}
-    <p class="m-5 text-secondary fw-bold fs-3">Followers</p>
+    <p class="m-5 text-secondary fw-bold fs-3">Likes</p>
     <div class="d-flex flex-column align-items-center justify-content-center">
         
         
-        {% for i in follower %}
-        <script>console.log("{{ i.following.img.url }}")</script>
+        {% for i in likes %}
+        <script>console.log("{{ i.user.img.url }}")</script>
         <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
             <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
                 <div class="d-flex align-items-center">
                     <div class="player-scout-img">
-                        <img class="w-100 rounded-circle" src={{i.following.img.url}} alt="">
+                        <img class="w-100 rounded-circle" src={{i.user.img.url}} alt="">
                     </div>
                 </div>
                 
                 <div class="ms-3 col-lg-7 col-12">
-                    {% if i.following.is_club %}
-                    <p class="fs-2 fw-bold">{{i.following.club_name}}</p>
+                    {% if i.user.is_club %}
+                    <p class="fs-2 fw-bold">{{i.user.club_name}}</p>
                     {% else %}
-                    <p class="fs-2 fw-bold">{{i.following.first_name}} {{i.following.last_name}}</p>
+                    <p class="fs-2 fw-bold">{{i.user.first_name}} {{i.user.last_name}}</p>
                     {% endif %}
-                    <p class=""><b>District: </b>{{i.following.district}} </p>
-                    <p class=""><b>Locality </b>{{i.following.locality}}</p>
+                    <p class=""><b>District: </b>{{i.user.district}} </p>
+                    <p class=""><b>Locality </b>{{i.user.locality}}</p>
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
