--- a/us/template/reg-club.html
+++ b/us/template/reg-club.html
@@ -113,7 +113,7 @@
         {{ playerForm.locality }}
     </div>
                     <div class="d-flex justify-content-center"><button type="submit"
-                            class="btn btn-outline-primary text-light p-2 w-50 mt-3">Sign-up</button></div>
+                            class="btn btn-outline-primary text-light p-2 w-50 mt-3">Register</button></div>
                 </form>
                 {% if msg %}
                 <p class="m-3 text-danger">{{ msg }}</p>
