--- a/us/template/EditContract.html
+++ b/us/template/EditContract.html
@@ -227,6 +227,11 @@
                                 <input class="form-control shadow-none wage-input" type="number" name="fee" value={{i.fees}}>
                             </div>
                         </div>
+                        <label for="start_date">Start Date:</label>
+                        <input class="form-control wage-input" value="{{ i.start_date|date:'Y-m-d' }}" type="date" id="start_date" name="start_date" required><br>
+                        
+                        <label for="contract_years">Contract Years:</label>
+                        <input class="form-control wage-input" type="number" value="{{i.years}}" id="contract_years" name="contract_years" min="1" max="10" required><br>
                         <div class="d-flex flex-column w-100 mt-4">
                             <label for="bonus">Bonus</label>
                             <textarea name="bonus" class="form-control wage-input" id="" cols="30" rows="10">{{i.bonus}}</textarea>
