fifa based prediction

--- a/us/template/Contract.html
+++ b/us/template/Contract.html
@@ -247,8 +247,31 @@
 </body>
 
 </html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+<script>
+    $(function(){
+    var dtToday = new Date();
+    
+    var month = dtToday.getMonth() + 1;
+    var day = dtToday.getDate();
+    var year = dtToday.getFullYear();
+    if(month < 10)
+        month = '0' + month.toString();
+    if(day < 10)
+        day = '0' + day.toString();
+    
+    var maxDate = year + '-' + month + '-' + day;
+
+    // or instead:
+    // var maxDate = dtToday.toISOString().substr(0, 10);
+
+    $('#start_date').attr('min', maxDate);
+});
+</script>
 <script>
     $(document).ready(function () {
+        
         $("#search_bar").keyup(function(){
             
             var headers = {
