--- a/us/template/EditContract.html
+++ b/us/template/EditContract.html
@@ -206,8 +206,8 @@
     </nav>
     {% endif %}
     <div class="d-flex justify-content-center">
-        <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-8">
-            <p class="m-4 text-secondary fs-4 fw-bold">Contract</p>
+        <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-5 m-3">
+            <p class="m-4 text-secondary fs-4 fw-bold">Current contract</p>
             <form action="" method="post"  enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for i in cont %}
@@ -256,10 +256,73 @@
             </div>
             {% endfor %}
         </div>
+        <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-5 m-3">
+            <p class="m-4 text-secondary fs-4 fw-bold">Your last offer</p>
+            
+                {% for i in history %}
+                <div class="d-flex justify-content-center">
+                    <div class="col-lg-8 col-12">
+                        <div class="d-flex flex-column w-100">
+                            <label for="wage">Appearance Fee</label>
+                            <div class="input-group">
+                                <span class="input-group-text">₹</span>
+                                <input class="form-control shadow-none wage-input" disabled type="number" name="wage" value={{i.wage}}>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-column w-100 mt-4">
+                            <label for="fee">Signing on fee</label>
+                            <div class="input-group">
+                                <span class="input-group-text">₹</span>
+                                <input class="form-control shadow-none wage-input" disabled type="number" name="fee" value={{i.fees}}>
+                            </div>
+                        </div>
+                        <label for="start_date">Start Date:</label>
+                        
+                        
+                        <input class="form-control wage-input" disabled value="{{ i.start_date|date:'Y-m-d' }}" type="date" id="start_date" name="start_date" required><br>
+                        
+                        <label for="contract_years">Contract Years:</label>
+                        <input class="form-control wage-input" type="number" disabled value="{{i.years}}" id="contract_years" name="contract_years" min="1" max="10" required><br>
+                        <div class="d-flex flex-column w-100 mt-4">
+                            <label for="bonus">Bonus</label>
+                            <textarea name="bonus" class="form-control wage-input" id="" disabled cols="30" rows="10">{{i.bonus}}</textarea>
+                            
+                        </div>
+                        
+                    </div>
+                </div>
+                
+
+            
+            {% endfor %}
+            
+        </div>
     </div>
 </body>
 
 </html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+<script>
+    $(function(){
+    var dtToday = new Date();
+    
+    var month = dtToday.getMonth() + 1;
+    var day = dtToday.getDate();
+    var year = dtToday.getFullYear();
+    if(month < 10)
+        month = '0' + month.toString();
+    if(day < 10)
+        day = '0' + day.toString();
+    
+    var maxDate = year + '-' + month + '-' + day;
+
+    // or instead:
+    // var maxDate = dtToday.toISOString().substr(0, 10);
+
+    $('#start_date').attr('min', maxDate);
+});
+</script>
 <script>
     const wageInputs = document.querySelectorAll('.wage-input');
     const acceptButton = document.getElementById('accept-button');
