--- a/us/template/ScoutPlayerEdit.html
+++ b/us/template/ScoutPlayerEdit.html
@@ -4,60 +4,65 @@
 
 <head>
     <style>
-        #search-results{
+        #search-results {
             position: fixed;
             background-color: white;
             z-index: 1;
             top: 75px;
         }
+
         .search-container {
-        position: relative;
-        width: 50%;
-        margin-left: 3px;
-    }
-
-    /* Style for the user list container */
-    .user-list {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        max-height: 200px; /* Set a maximum height for the list */
-        overflow-y: auto; /* Enable vertical scrolling */
-        background-color: #fff;
-        border: 1px solid #ccc;
-        border-top: none;
-        display: none; /* Hide by default */
-    }
-
-    /* Style for each user box */
-    .user-box {
-        display: flex;
-        align-items: center;
-        border-bottom: 1px solid #ccc;
-        padding: 10px;
-    }
-
-    /* Style for user image */
-    .user-img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        margin-right: 10px;
-    }
-
-    /* Style for user name */
-    .user-name {
-        font-weight: bold;
-    }
-    @media (max-width: 991.98px) {
-        #search-results{
-            position: fixed;
-            background-color: white;
-            z-index: 1;
-            top: 125px;
+            position: relative;
+            width: 50%;
+            margin-left: 3px;
         }
-}
+
+        /* Style for the user list container */
+        .user-list {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            max-height: 200px;
+            /* Set a maximum height for the list */
+            overflow-y: auto;
+            /* Enable vertical scrolling */
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-top: none;
+            display: none;
+            /* Hide by default */
+        }
+
+        /* Style for each user box */
+        .user-box {
+            display: flex;
+            align-items: center;
+            border-bottom: 1px solid #ccc;
+            padding: 10px;
+        }
+
+        /* Style for user image */
+        .user-img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+
+        /* Style for user name */
+        .user-name {
+            font-weight: bold;
+        }
+
+        @media (max-width: 991.98px) {
+            #search-results {
+                position: fixed;
+                background-color: white;
+                z-index: 1;
+                top: 125px;
+            }
+        }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8">
@@ -75,7 +80,10 @@
 <body class="bg-light">
     <nav class="navbar player-navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#"><p class="text-white">Urban</p><p class="text-warning">Scout</p></a>
+            <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
+                <p class="text-white">Urban</p>
+                <p class="text-warning">Scout</p>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -97,7 +105,8 @@
                             <a class="nav-link text-secondary" aria-current="page" href="{% url 'ScoutClub' %}">Club</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="{% url 'ScoutPlayer' %}">Players</a>
+                            <a class="nav-link text-white" aria-current="page"
+                                href="{% url 'ScoutPlayer' %}">Players</a>
                         </li>
                     </ul>
                 </div>
@@ -105,7 +114,8 @@
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
                         <p class="text-light "><i class="bi bi-binoculars-fill"></i> {{user.first_name}}</p>
                     </div>
-                    <a class="d-flex flex-column justify-content-center text-decoration-none" href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
+                    <a class="d-flex flex-column justify-content-center text-decoration-none"
+                        href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
                 </div>
             </div>
         </div>
@@ -113,15 +123,51 @@
     <div class="d-flex justify-content-center">
         <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-8">
             <p class="m-4 text-secondary fs-4 fw-bold">Edit Profile</p>
-            <form action="" method="post"  enctype="multipart/form-data">
+            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                
+
                 <div class="d-flex justify-content-center">
                     <div class="col-lg-8 col-12">
-                        
-                        <div class="d-flex"><p class="fw-bold fs-3">Player Name:</p><p class="text-secondary fw-bold fs-3">{{updateUser.first_name}} {{updateUser.last_name}}</p></div>
-                        
+
+                        <div class="d-flex">
+                            <p class="fw-bold fs-3">Player Name:</p>
+                            <p class="text-secondary fw-bold fs-3">{{updateUser.first_name}} {{updateUser.last_name}}
+                            </p>
+                        </div>
+
                         <div class="d-flex justify-content-center gap-2 m-5">
+                            {% if updateUser.player_pos == 'GoalKeeper' %}
+                            <div class="d-flex flex-wrap w-100">
+                            <div class="d-flex flex-column w-100">
+                                <label for="pace">Diving</label>
+                                <input class="form-control" type="number" min="0" name="goalkeeping_diving" max="100">
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="pace">Handling</label>
+                                <input class="form-control" type="number" min="0" name="goalkeeping_handling" max="100">
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="pace">Kicking</label>
+                                <input class="form-control" type="number" min="0" name="goalkeeping_kicking" max="100">
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="pace">Positioning</label>
+                                <input class="form-control" type="number" min="0" name="goalkeeping_positioning" max="100">
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="pace">Reflexes</label>
+                                <input class="form-control" type="number" min="0" name="goalkeeping_reflexes" max="100">
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="pace">Speed</label>
+                                <input class="form-control" type="number" min="0" name="goalkeeping_speed" max="100">
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="age">Age</label>
+                                <input class="form-control" type="number" min="0" name="age" max="100">
+                            </div>
+                        </div>
+                            {% else %}
                             <div class="d-flex flex-wrap w-100">
                                 <div class="d-flex flex-column w-100">
                                     <label for="pace">Pace</label>
@@ -152,14 +198,14 @@
                                     <input class="form-control" type="number" min="0" name="age" max="100">
                                 </div>
                             </div>
-                            
-                            
+                            {% endif %}
+
                         </div>
-                        
+
                         <div class="d-flex justify-content-center mt-2">
                             <button type="submit" class="btn btn-success">Update</button>
                         </div>
-                        
+
                     </div>
                 </div>
             </form>
@@ -170,67 +216,67 @@
 </html>
 <script>
     $(document).ready(function () {
-        $("#search_bar").keyup(function(){
-            
+        $("#search_bar").keyup(function () {
+
             var headers = {
                 "X-CSRFToken": $("input[name=csrfmiddlewaretoken]").val()
             };
             var searchTerm = $(this).val();
             console.log(searchTerm)
             if (searchTerm.trim() === "") {
-        // If it's empty, hide the container and return
-        $("#search-results").hide();
-        return;
-    }
-    
+                // If it's empty, hide the container and return
+                $("#search-results").hide();
+                return;
+            }
+
             $.ajax({
-                type:"GET",
+                type: "GET",
                 headers: headers,
-                dataType:'Json',
-                url:"{% url 'search_by_name' 0 %}".replace('0',searchTerm),
+                dataType: 'Json',
+                url: "{% url 'search_by_name' 0 %}".replace('0', searchTerm),
                 success: function (data) {
                     // Clear previous results
                     $("#search-results").empty();
 
                     // Parse the JSON data
                     var users = JSON.parse(data);
-                    
+
                     // Loop through the users and create HTML elements
                     for (var i = 0; i < users.length; i++) {
-                        
-    var user = users[i];
-    console.log(user.pk)
-    var userHtml = '<div class="user-box">';
-    userHtml += '<img class="user-img" src="' + user.fields.img + '" alt="User Image">';
-    userHtml += '<p class="user-name">';
-    
-    // Check if the user is a Scout and add a link to ScoutHome
-    if (user.fields.is_scout) {
-        userHtml += '<a class="text-decoration-none text-dark" href="{% url "scout-home" 0 %}">'.replace("0",user.pk);
-        userHtml += user.fields.first_name + ' ' + user.fields.last_name;
-    }
-    // Check if the user is a Player and add a link to PlayerHome
-    else if (user.fields.is_player) {
-        userHtml += '<a class="text-decoration-none text-dark" href="{% url "player-home" 0 %}">'.replace("0",user.pk);
-        userHtml += user.fields.first_name + ' ' + user.fields.last_name;
-    }
-    else{
-        userHtml += '<a class="text-decoration-none text-dark" href="{% url "clubHome" 0 %}">'.replace("0",user.pk);
-        userHtml += user.fields.club_name;
-    }
-    
-    // Close the anchor tag if added
-    if (user.fields.isScout || user.fields.isPlayer) {
-        userHtml += '</a>';
-    }
-    
-    userHtml += '</p>';
-    userHtml += '</div>';
 
-    $("#search-results").append(userHtml);
-}
+                        var user = users[i];
+                        console.log(user.pk)
+                        var userHtml = '<div class="user-box">';
+                        userHtml += '<img class="user-img" src="' + user.fields.img + '" alt="User Image">';
+                        userHtml += '<p class="user-name">';
 
-                    
+                        // Check if the user is a Scout and add a link to ScoutHome
+                        if (user.fields.is_scout) {
+                            userHtml += '<a class="text-decoration-none text-dark" href="{% url "scout-home" 0 %}">'.replace("0", user.pk);
+                            userHtml += user.fields.first_name + ' ' + user.fields.last_name;
+                        }
+                        // Check if the user is a Player and add a link to PlayerHome
+                        else if (user.fields.is_player) {
+                            userHtml += '<a class="text-decoration-none text-dark" href="{% url "player-home" 0 %}">'.replace("0", user.pk);
+                            userHtml += user.fields.first_name + ' ' + user.fields.last_name;
+                        }
+                        else {
+                            userHtml += '<a class="text-decoration-none text-dark" href="{% url "clubHome" 0 %}">'.replace("0", user.pk);
+                            userHtml += user.fields.club_name;
+                        }
+
+                        // Close the anchor tag if added
+                        if (user.fields.isScout || user.fields.isPlayer) {
+                            userHtml += '</a>';
+                        }
+
+                        userHtml += '</p>';
+                        userHtml += '</div>';
+
+                        $("#search-results").append(userHtml);
+                    }
+
+
                     // Show the user list
                     $("#search-results").show();
                 },
